[#28] Added bg to mobile menu and fixed spacing

--- a/src/colors.css
+++ b/src/colors.css
@@ -1,5 +1,6 @@
 html body,
-.l-header 
+.l-header,
+.menu-dropdown
 {
   background-color: #FFFFFE;
   color: #2E2D28;
